--- a/index.html
+++ b/index.html
@@ -1,21 +1,107 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<META charset="UTF-8">	
-	<title>Primer Ejercicio</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Gruppo&family=Parisienne&display=swap" rel="stylesheet">
-
-</head>
-<body>
-
-
-<img src="img/avatar.jpg" class="avatar" alt="Este soy yo">
-<h1>Roberto Carlos TIERNO</h1>
-<p>From Cali, COLOMBIA</p>
-
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>🦾 Roberto Carlos TIERNO - Curriculum Vitae</title>
+  </head>
+  <body>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="img/avatar_rnd.png" alt="Foto de perfil Roberto Carlos TIERNO"></td>
+            <td> <h1>Roberto Carlos TIERNO</h1>
+                <p><em>🦾 Biomedical Engineer 🦿</em></p>
+                <p><em><strong>Medical Device and Health Technology Management</strong> Specialist</em></p>
+                <p><strong><a href="contact.html">CONTACTO</a></strong></p>
+            </td>
+        </tr>
+    </table>
+    <hr size="2" noshade>
+    <h3>Abstract</h3>
+    <p><strong><a href="http://www.bioradib.com">BIORAD MEDICAL SERVICES</a>  </strong> CEO & Founder. Actually working as Technical Director of LEADER LIFE Hiperbaric Chambers in Cali, Colombia. Director of Engineering Degree Projects at the Universidad Autónoma de Occidente. 
+    Also working in Biomedical Instrumentation for America de Cali Football Club.</p>
+    <p>Now researching as Full Stack Web Developer to bring to life new Health and Clinical Solutions in Biomedical Engineering</p>
+    <hr size="2" noshade>
+    <h3>Education</h3>
+    <p> I received my Bachelor's Degree in Electronics in 1996. Then I studied Computer Science and then I received my Biomedical Engineering degree. In 2016, I graduated as Specialist in Medical Device and Health Technology Management in Universidad Autónoma de Occidente. </p>
+    <hr size="2" noshade>
+    <h3>Courses And Certifications</h3>
+    <ul>
+        <li><strong>Full Stack Web Development</strong>. Year: <em>2021</em></li>
+        <li><strong>ISO 13485:2016 Auditor</strong>. Year: <em>2020</em></li>
+        <li><strong>ISO 9001:2015 Auditor</strong>. Year: <em>2021</em></li>
+        <li><strong>Degree in Internal Audit - ISO 19011:2018</strong>. Year: <em>2020</em></li>
+        <li><strong>ISO 17025:2015 Auditor</strong>. Year: <em>2017</em></li>
+    </ul>
+    <hr size="2" noshade>
+    <h3> Actual Work</h3>
+    <ul>
+        <li><strong><a href="https://www.leaderlifehbo.com/en/">LEADER LIFE Hiperbaric Chambers</a> </strong>. Technical Director. Year: <em>2018 - today</em></li>
+        <li><strong><a href="http://www.bioradib.com">BIORAD MEDICAL SERVICES</a></strong>. CEO & Manager. Year: <em>2014 - today</em></li>
+        <li><strong>America de Cali F.C.</strong>. Bioinstrumentation Engineer. Year: <em>2017 - today</em></li>
+        <li><strong><a href="http://www.uao.edu.co">Universidad Autónoma de Occidente (UAO)</a></strong>. Director of Thesis and Degree Projects. Year: <em>2019 - today</em></li>
+        <li><strong><a href="https://drluislasso.com/">Clínica Dr. Luis LASSO</a></strong>. Technical Director. Year: <em>2020 - today</em></li>
+    </ul>
+    <hr size="2">
+    <table cellspacing="2" border="1">
+        <thead>
+            <th colspan="2">
+                <h3>Skills</h3>
+            </th>
+        </thead>
+        <tbody>
+        <tr>
+            <td>
+                <table cellspacing ="10">
+                    <tr>
+                        <td>Electronics</td>
+                        <td>🏆🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Embedded Systems</td>
+                        <td>🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>3D Printing</td>
+                        <td>🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Bioinstrumentation</td>
+                        <td>🏆🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Project Management</td>
+                        <td>🏆🏆🏆🏆</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table cellspacing = "10">
+                    <tr>
+                        <td>Health Facility Mgmnt</td>
+                        <td>🏆🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Programming</td>
+                        <td>🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Networking</td>
+                        <td>🏆🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Group Leadership</td>
+                        <td>🏆🏆🏆🏆🏆</td>
+                    </tr>
+                    <tr>
+                        <td>Web Development</td>
+                        <td>🏆🏆🏆🏆</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+  </body>
 </html>
